--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:orientation="horizontal"
-    tools:context=".ui.DashboardFragment">
+    tools:context=".ui.dashboard.DashboardFragment">
 
     <LinearLayout
         android:id="@+id/constraintLayout"
