--- a/app/src/main/res/layout/fragment_dialog_logout.xml
+++ b/app/src/main/res/layout/fragment_dialog_logout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="24dp"
-    tools:context=".ui.DialogLogoutFragment">
+    tools:context=".DialogLogoutFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout3"
